--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -14,6 +14,16 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: #f2f4fc;
 }
+.container {
+  width: 80%;
+  margin: auto;
+}
+.section-title {
+  color: #292e47;
+  text-align: center;
+  font-size: 34px;
+  margin-bottom: 2rem;
+}
 
 /* ------------------------------------------------------------------------ */
 /* ------------------------------ INDEX html ------------------------------ */
@@ -27,6 +37,10 @@ body {
 
 /* Your CSS code goes here */
 
+/* HEADER */
+header {
+  padding: 16px 0;
+}
 /* ------------------------------ Navbar ------------------------------ */
 
 nav {
@@ -38,7 +52,12 @@ nav {
 }
 
 .logo img {
-  height: 20px; 
+  height: 20px;
+}
+
+.menu,
+.contact {
+  display: none;
 }
 
 .menu ul {
@@ -58,37 +77,178 @@ nav {
   color: #7c829a;
 }
 
-.contact-btn {
+/* ------------------------------ HERO ------------------------------ */
+
+#hero {
+  margin-top: 5rem;
+}
+#hero .hero-text {
+  text-align: center;
+}
+#hero .hero-text h1 {
+  font-size: 2rem;
+  color: #292e47;
+}
+#hero .hero-text p {
+  margin-top: 2rem;
+  margin-bottom: 2.5rem;
+  color: #6b708d;
+  line-height: 1.5;
+}
+#hero .hero-container-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#hero .hero-container-button .contact-btn {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 16px 20px;
   background-color: #072ac8;
   color: #fff;
   text-decoration: none;
+  font-weight: 500;
+  margin-bottom: 2rem;
 }
-
-.contact-btn:hover {
+#hero .hero-container-button .contact-btn:hover {
   background-color: #292e47;
 }
+#hero .hero-container-button .work-btn {
+  text-decoration: none;
+  font-weight: 500;
+  color: #6c718b;
+}
+#hero .hero-pictures {
+  margin-top: 3rem;
+  text-align: center;
+}
+#hero .hero-pictures img {
+  width: 80%;
+}
 
-/* ------------------------------ Header ------------------------------ */
-
-/* Your CSS code goes here */
+#hero .hero-pictures img:not(:first-child) {
+  display: none;
+}
 
 /* ------------------------------ Partners ------------------------------ */
+#partners {
+  margin: 3.5rem 0;
+}
+#partners .partners-logos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+}
+#partners .partners-logos a {
+  width: 40%;
+  display: block;
+  padding: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#partners .partners-logos a:not(:nth-of-type(-n + 4)) {
+  display: none;
+}
 
-/* Your CSS code goes here */
+#partners .partners-logos a:nth-of-type(-n + 4) img {
+  width: 70%;
+}
 
 /* ------------------------------ Recent projects ------------------------------ */
+#projects {
+  padding: 2.5rem 0;
+}
+#projects .js-projects .project {
+  background-color: #fff;
+  margin: 3rem 0;
+}
+#projects .js-projects .project img {
+  width: 100%;
+}
+#projects .js-projects .project .text-project {
+  padding: 1.5rem;
+}
+#projects .js-projects .project .text-project p {
+  margin: 1.5rem 0;
+  color: #292e47;
+  font-weight: 300;
+}
+#projects .js-projects .project .text-project h3 {
+  color: #292e47;
+}
 
-/* Your CSS code goes here */
+#projects .js-projects .project .text-project a {
+  text-decoration: none;
+  font-weight: 500;
+  color: #072ac8;
+}
 
 /* ------------------------------ Client reviews ------------------------------ */
 
-/* Your CSS code goes here */
+#clients {
+  padding: 1.5rem 0;
+  background-color: #292e47;
+  background-image: url("../images/testimonial-section/orbit.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#clients .container {
+  width: 95%;
+}
+
+#clients h2 {
+  text-align: center;
+  color: #fff;
+  font-size: 32px;
+}
+#clients p {
+  margin: 2.5rem 0;
+  text-align: center;
+  color: gold;
+  font-size: 28px;
+  font-weight: 300;
+}
+#clients .profile {
+  width: 60%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#clients .profile img {
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+  margin-right: 8px;
+}
+#clients .profile h4 {
+  color: #7cc2ff;
+  font-weight: 400;
+}
+#clients .profile span {
+  color: #fff;
+  font-weight: 300;
+  font-size: 14px;
+}
 
 /* ------------------------------ Services ------------------------------ */
 
-/* Your CSS code goes here */
+#services .container{
+  width: 60%;
+  margin: auto;
+}
+
+.services-container{
+  background-color: #fff;
+  margin: 40px 0;
+}
+.services-container-logo{
+  background-color: #ecf6ff;
+  border-radius: 20px;
+  border-radius: 50%;
+}
 
 /* ------------------------------ Questions form ------------------------------ */
 
@@ -96,7 +256,42 @@ nav {
 
 /* ------------------------------ Footer ------------------------------ */
 
-/* Your CSS code goes here */
+footer {
+  display: block;
+  text-align: center;
+  margin-top: 7rem; 
+  margin-bottom: 7rem;
+}
+
+.footer-address-logo {
+  margin-bottom: 20px;
+}
+
+.footer-address-logo img {
+  width: 6rem;
+}
+
+.footer-address-text {
+  font-weight: 300;
+  font-size: 17px;
+  margin-bottom: 20px;
+}
+
+.footer-links {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-row-gap: 20px;
+  grid-column-gap: 20px;
+  margin-left: 4rem;
+  margin-right: 4rem; 
+}
+
+.footer-links a {
+  text-decoration: none;
+  font-weight: 500;
+  color: #072ac8;
+}
 
 /* -------------------------------------------------------------------------- */
 /* ------------------------------ PROJECT html ------------------------------ */
