--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -13,6 +13,7 @@
 body {
   font-family: "Roboto", sans-serif;
   background-color: #f2f4fc;
+  color: #292e47;
 }
 .container {
   width: 80%;
@@ -20,8 +21,8 @@ body {
 }
 .section-title {
   color: #292e47;
-  text-align: center;
-  font-size: 34px;
+  text-align: left;
+  font-size: 40px;
   margin-bottom: 2rem;
 }
 
@@ -161,7 +162,7 @@ nav {
 }
 #projects .js-projects .project {
   background-color: #fff;
-  margin: 3rem 0;
+  margin: 40px 10px;
 }
 #projects .js-projects .project img {
   width: 100%;
@@ -203,6 +204,7 @@ nav {
   color: #fff;
   font-size: 32px;
 }
+
 #clients p {
   margin: 2.5rem 0;
   text-align: center;
@@ -235,31 +237,99 @@ nav {
 
 /* ------------------------------ Services ------------------------------ */
 
-#services .container{
-  width: 60%;
-  margin: auto;
+#services .service-container {
+  background-color: #fff;
+  margin: 40px;
+  padding: 30px;
 }
 
-.services-container{
-  background-color: #fff;
-  margin: 40px 0;
+#services .section-title {
+  margin-top: 7rem;
+  margin-bottom: 6rem;
 }
-.services-container-logo{
-  background-color: #ecf6ff;
-  border-radius: 20px;
+
+#services .service-container img {
   border-radius: 50%;
+  background-color: #ecf6ff;
+  padding: 20px;
+  margin-left: 5px;
+  margin-bottom: 20px;
+}
+
+#services .service-container h3 {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+#services .service-container p {
+  margin: 30px 0;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+#services .service-container a {
+  text-decoration: none;
+  font-weight: 500;
 }
 
 /* ------------------------------ Questions form ------------------------------ */
 
-/* Your CSS code goes here */
+#questions {
+  background-color: #ffc600;
+}
+
+#questions .questions-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#questions .questions-container h3 {
+  font-size: 1.7rem;
+  text-align: center;
+  margin-top: 30px;
+}
+
+#questions .questions-container p {
+  font-size: 1rem;
+  color: #6c718b;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+#questions .questions-container input {
+  background-image: url("../images/newsletter/icon/mail.svg");
+  background-repeat: no-repeat;
+  background-position-y: center;
+  background-position-x: 5px;
+  padding-left: 40px;
+  height: 4.2rem;
+  font-weight: 400;
+  font-size: 1.1rem;
+  width: 55%;
+  margin-bottom: 25px;
+}
+
+#questions .questions-container a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  background-color: #072ac8;
+  font-weight: 500;
+  font-size: 1rem;
+  color: #fff;
+  width: 55%;
+  height: 4.2rem;
+  margin-bottom: 30px;
+}
 
 /* ------------------------------ Footer ------------------------------ */
 
 footer {
   display: block;
   text-align: center;
-  margin-top: 7rem; 
+  margin-top: 7rem;
   margin-bottom: 7rem;
 }
 
@@ -284,7 +354,7 @@ footer {
   grid-row-gap: 20px;
   grid-column-gap: 20px;
   margin-left: 4rem;
-  margin-right: 4rem; 
+  margin-right: 4rem;
 }
 
 .footer-links a {
