--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -399,7 +399,7 @@ footer {
   /* Your CSS code goes here */
 }
 
-/* ------------------------------ Hamburguer menu ------------------------------ */
+/* ------------------------------ Hamburger menu ------------------------------ */
 
 /* Your CSS code goes here */
 
