--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -234,10 +234,13 @@ nav {
   font-weight: 300;
   font-size: 14px;
 }
+#clients .emojis{
+  display: none;
+}
 
 /* ------------------------------ Services ------------------------------ */
 
-#services .service-container {
+#services .service {
   background-color: #fff;
   margin: 40px;
   padding: 30px;
@@ -248,26 +251,30 @@ nav {
   margin-bottom: 6rem;
 }
 
-#services .service-container img {
+#services .service .img-container {
   border-radius: 50%;
   background-color: #ecf6ff;
   padding: 20px;
   margin-left: 5px;
   margin-bottom: 20px;
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#services .service-container h3 {
+#services .service h3 {
   font-size: 1.3rem;
   font-weight: bold;
 }
 
-#services .service-container p {
+#services .service p {
   margin: 30px 0;
   font-size: 1rem;
   font-weight: 300;
 }
 
-#services .service-container a {
+#services .service a {
   text-decoration: none;
   font-weight: 500;
 }
@@ -306,7 +313,7 @@ nav {
   height: 4.2rem;
   font-weight: 400;
   font-size: 1.1rem;
-  width: 55%;
+  border: 0;
   margin-bottom: 25px;
 }
 
@@ -319,7 +326,7 @@ nav {
   font-weight: 500;
   font-size: 1rem;
   color: #fff;
-  width: 55%;
+  
   height: 4.2rem;
   margin-bottom: 30px;
 }
@@ -353,8 +360,7 @@ footer {
   grid-template-rows: repeat(2, 1fr);
   grid-row-gap: 20px;
   grid-column-gap: 20px;
-  margin-left: 4rem;
-  margin-right: 4rem;
+
 }
 
 .footer-links a {
@@ -389,14 +395,181 @@ footer {
 /* ------------------------------ MEDIA QUERIES ------------------------------ */
 /* --------------------------------------------------------------------------- */
 
-/* ------------------------- Smaller than 990px (tablet) ------------------------- */
-@media (max-width: 990px) {
+
+
+/* ------------------------- More than 767px (Tablet) ------------------------- */
+@media (min-width: 767px) {
   /* Your CSS code goes here */
+  .container{
+    width: 88%;
+  }
+  #hero .hero-text h1 {
+    font-size: 3.9rem;
+  }
+  #hero .hero-text p{
+    font-size: 1.3rem;
+  }
+  #hero .hero-container-button{
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.05rem;
+  }
+  #hero .hero-container-button .contact-btn{
+    margin-bottom: 0;
+    margin-right: 16px;
+  }
+  #hero .hero-pictures{
+    position: relative;
+    padding-bottom: 5rem;
+  }
+  #hero .hero-pictures img{
+    display: block!important;
+    margin: auto;
+  }
+  #hero .hero-pictures img:nth-child(2){
+    width: 250px;
+    position: absolute;
+    top: 0;
+  }
+  #hero .hero-pictures img:last-child{
+    position: absolute;
+    bottom: 0;
+    width: 250px;
+    right: -5%;
+  }
+  #partners .partners-logos{
+    align-items: center;
+  }
+  #partners .partners-logos a:nth-of-type(-n + 6) {
+    display: block;
+  }
+  #partners .partners-logos a{
+    width: 31%;
+    text-align: center;
+  }
+  #projects .js-projects{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  #projects .js-projects .project{
+    width: 47%;
+    margin: 24px 0px;
+  }
+  #projects .js-projects .project .text-project h3{
+    font-size: 1.3rem;
+  }
+  #projects .js-projects .project .text-project p{
+    font-size: 1.1rem;
+  }
+  #clients {
+    position: relative;
+  }
+  #clients p{
+    width: 60%;
+    margin: 90px auto;
+  }
+  #clients .emojis{
+    display: block;
+  }
+  #clients .emojis img{
+    position: absolute;
+    width: 100px;
+  }
+  #clients .emojis img:first-child{
+    top: 0;
+    left: 0;
+  }
+  #clients .emojis img:nth-child(2){
+    top: 0;
+    right: 0;
+  }
+  #clients .emojis img:nth-child(3){
+    bottom: 0;
+    left: 0;
+  }
+  #clients .emojis img:last-child{
+    bottom: 0;
+    right: 0;
+  }
+  #services{
+    padding-bottom: 7rem;
+  }
+  #services .service p{
+    font-size: 1.1rem;
+  }
+  #services .services-container{
+    display: flex;
+    justify-content: space-between;
+  }
+  #services .services-container .service{
+    width: 31%;
+    margin: 0;
+  }
+  #questions {
+    padding-bottom: 5rem;
+  }
+  #questions .questions-container h3{
+    font-size: 2.5rem;
+    margin-top: 5rem;
+  }
+  #questions .input-container{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+  #questions .input-container input{
+    width: 80%;
+  }
+  #questions .input-container .contact-btn{
+    width: 120px;
+    margin-left: 16px;
+  }
+  footer .container{
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
-/* ------------------------- Smaller than 766px (mobile) ------------------------- */
-@media (max-width: 766px) {
+
+/* ------------------------- More than 1023px (Desktop) ------------------------- */
+@media (min-width: 1024px) {
   /* Your CSS code goes here */
+  header{
+    padding: 52px 0;
+  }
+  .menu, .contact{
+    display: block;
+  }
+  .menu ul li a {
+  font-size: 1.05rem;
+  margin: 0 12px;
+  }
+  .contact .contact-btn{
+    background-color: #072ac8;
+    color: white;
+    font-weight: 500;
+    font-size: 1.05rem;
+    padding: 16px;
+    text-decoration: none;
+  }
+  #hero .hero-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  #hero .hero-text{
+    width: 40%;
+    text-align: left;
+  }
+  #hero .hero-pictures{
+    width: 55%;
+  }
+  #hero .hero-container-button .contact-btn{
+    order: 2;
+    margin-left: 16px;
+  }
 }
 
 /* ------------------------------ Hamburger menu ------------------------------ */
