--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -32,8 +32,6 @@ body {
 
 /* ------------------------------ Splash page ------------------------------ */
 
-/* Your CSS code goes here */
-
 /* ------ CIRCULAR ANIMATION ------ */
 
 /* Your CSS code goes here */
@@ -234,7 +232,7 @@ nav {
   font-weight: 300;
   font-size: 14px;
 }
-#clients .emojis{
+#clients .emojis {
   display: none;
 }
 
@@ -326,7 +324,7 @@ nav {
   font-weight: 500;
   font-size: 1rem;
   color: #fff;
-  
+
   height: 4.2rem;
   margin-bottom: 30px;
 }
@@ -360,7 +358,6 @@ footer {
   grid-template-rows: repeat(2, 1fr);
   grid-row-gap: 20px;
   grid-column-gap: 20px;
-
 }
 
 .footer-links a {
@@ -375,7 +372,57 @@ footer {
 
 /* ------------------------------ Project main ------------------------------ */
 
-/* Your CSS code goes here */
+.container-projects {
+  width: 93%;
+  margin: auto;
+}
+
+.main-project .title {
+  font-size: 1.5rem;
+  color: #292e47;
+  margin-top: 20px;
+}
+
+.main-project .title-footer {
+  display: flex;
+  color: #6c718b;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.main-project .title-footer h2 {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.main-project .title-footer h3 {
+  font-weight: 400;
+  font-size: 1rem;
+  text-align: center;
+}
+
+.main-project .image-project img {
+  width: 100%;
+  height: 444px;
+}
+
+.main-project .text-project {
+  display: flex;
+  flex-direction: column;
+  margin-top: 3rem;
+  margin-bottom: 5rem;
+}
+
+.main-project .text-project p {
+  color: #292e47;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.main-project .text-project > :nth-child(2) {
+  margin-top: 10px;
+}
 
 /* ----------------------------------------------------------------------------- */
 /* ------------------------------ CONTACT-US html ------------------------------ */
@@ -395,158 +442,154 @@ footer {
 /* ------------------------------ MEDIA QUERIES ------------------------------ */
 /* --------------------------------------------------------------------------- */
 
-
-
-/* ------------------------- More than 767px (Tablet) ------------------------- */
+/* ------------------------- Greater than 767px (Tablet) ------------------------- */
 @media (min-width: 767px) {
-  /* Your CSS code goes here */
-  .container{
+  .container {
     width: 88%;
   }
   #hero .hero-text h1 {
     font-size: 3.9rem;
   }
-  #hero .hero-text p{
+  #hero .hero-text p {
     font-size: 1.3rem;
   }
-  #hero .hero-container-button{
+  #hero .hero-container-button {
     flex-direction: row;
     justify-content: center;
     align-items: center;
     font-size: 1.05rem;
   }
-  #hero .hero-container-button .contact-btn{
+  #hero .hero-container-button .contact-btn {
     margin-bottom: 0;
     margin-right: 16px;
   }
-  #hero .hero-pictures{
+  #hero .hero-pictures {
     position: relative;
     padding-bottom: 5rem;
   }
-  #hero .hero-pictures img{
-    display: block!important;
+  #hero .hero-pictures img {
+    display: block !important;
     margin: auto;
   }
-  #hero .hero-pictures img:nth-child(2){
+  #hero .hero-pictures img:nth-child(2) {
     width: 250px;
     position: absolute;
     top: 0;
   }
-  #hero .hero-pictures img:last-child{
+  #hero .hero-pictures img:last-child {
     position: absolute;
     bottom: 0;
     width: 250px;
     right: -5%;
   }
-  #partners .partners-logos{
+  #partners .partners-logos {
     align-items: center;
   }
   #partners .partners-logos a:nth-of-type(-n + 6) {
     display: block;
   }
-  #partners .partners-logos a{
+  #partners .partners-logos a {
     width: 31%;
     text-align: center;
   }
-  #projects .js-projects{
+  #projects .js-projects {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  #projects .js-projects .project{
+  #projects .js-projects .project {
     width: 47%;
     margin: 24px 0px;
   }
-  #projects .js-projects .project .text-project h3{
+  #projects .js-projects .project .text-project h3 {
     font-size: 1.3rem;
   }
-  #projects .js-projects .project .text-project p{
+  #projects .js-projects .project .text-project p {
     font-size: 1.1rem;
   }
   #clients {
     position: relative;
   }
-  #clients p{
+  #clients p {
     width: 60%;
     margin: 90px auto;
   }
-  #clients .emojis{
+  #clients .emojis {
     display: block;
   }
-  #clients .emojis img{
+  #clients .emojis img {
     position: absolute;
     width: 100px;
   }
-  #clients .emojis img:first-child{
+  #clients .emojis img:first-child {
     top: 0;
     left: 0;
   }
-  #clients .emojis img:nth-child(2){
+  #clients .emojis img:nth-child(2) {
     top: 0;
     right: 0;
   }
-  #clients .emojis img:nth-child(3){
+  #clients .emojis img:nth-child(3) {
     bottom: 0;
     left: 0;
   }
-  #clients .emojis img:last-child{
+  #clients .emojis img:last-child {
     bottom: 0;
     right: 0;
   }
-  #services{
+  #services {
     padding-bottom: 7rem;
   }
-  #services .service p{
+  #services .service p {
     font-size: 1.1rem;
   }
-  #services .services-container{
+  #services .services-container {
     display: flex;
     justify-content: space-between;
   }
-  #services .services-container .service{
+  #services .services-container .service {
     width: 31%;
     margin: 0;
   }
   #questions {
     padding-bottom: 5rem;
   }
-  #questions .questions-container h3{
+  #questions .questions-container h3 {
     font-size: 2.5rem;
     margin-top: 5rem;
   }
-  #questions .input-container{
+  #questions .input-container {
     display: flex;
     width: 100%;
     justify-content: center;
   }
-  #questions .input-container input{
+  #questions .input-container input {
     width: 80%;
   }
-  #questions .input-container .contact-btn{
+  #questions .input-container .contact-btn {
     width: 120px;
     margin-left: 16px;
   }
-  footer .container{
+  footer .container {
     display: flex;
     justify-content: space-between;
   }
 }
 
-
-/* ------------------------- More than 1023px (Desktop) ------------------------- */
+/* ------------------------- Greater than 1023px (Desktop) ------------------------- */
 @media (min-width: 1024px) {
-  /* Your CSS code goes here */
-  header{
+  header {
     padding: 52px 0;
   }
-  .menu, .contact{
+  .menu,
+  .contact {
     display: block;
   }
   .menu ul li a {
-  font-size: 1.05rem;
-  margin: 0 12px;
+    font-size: 1.05rem;
+    margin: 0 12px;
   }
-  .contact .contact-btn{
+  .contact .contact-btn {
     background-color: #072ac8;
     color: white;
     font-weight: 500;
@@ -554,19 +597,19 @@ footer {
     padding: 16px;
     text-decoration: none;
   }
-  #hero .hero-container{
+  #hero .hero-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  #hero .hero-text{
+  #hero .hero-text {
     width: 40%;
     text-align: left;
   }
-  #hero .hero-pictures{
+  #hero .hero-pictures {
     width: 55%;
   }
-  #hero .hero-container-button .contact-btn{
+  #hero .hero-container-button .contact-btn {
     order: 2;
     margin-left: 16px;
   }
