--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -372,7 +372,7 @@ footer {
 
 /* ------------------------------ Project main ------------------------------ */
 
-.container-projects {
+.container-main-project {
   width: 93%;
   margin: auto;
 }
