--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -40,6 +40,22 @@ body {
 header {
   padding: 16px 0;
 }
+
+header .contact-email-phone .phone {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+}
+
+header .contact .contact-btn {
+  background-color: #072ac8;
+  color: white;
+  font-weight: 500;
+  font-size: 1.05rem;
+  padding: 16px;
+  text-decoration: none;
+}
+
 /* ------------------------------ Navbar ------------------------------ */
 
 nav {
@@ -50,38 +66,37 @@ nav {
   padding: 10px;
 }
 
-
 .logo img {
   height: 20px;
 }
 
-.menu{
+.menu {
   height: 0px;
   overflow: hidden;
   position: absolute;
-    width: 100%;
-    top: 60px;
-    left: 0;
-    background: #c9c8c9;
-    transition: all .3s ease;
+  width: 100%;
+  top: 60px;
+  left: 0;
+  background: #c9c8c9;
+  transition: all 0.3s ease;
 }
 .contact {
   display: none;
 }
-nav .icon-container{
+nav .icon-container {
   position: relative;
 }
 
-nav .icon-container i{
+nav .icon-container i {
   font-size: 28px;
   color: #6c718b;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
-nav .icon-container #btnHambur{
+nav .icon-container #btnHamburger {
   position: absolute;
   z-index: 99;
 }
-nav .icon-container #btnCross{
+nav .icon-container #btnCross {
   opacity: 0;
   position: relative;
 }
@@ -100,16 +115,14 @@ nav .icon-container #btnCross{
   font-weight: 500;
   padding: 16px 0;
   width: 100%;
-    text-align: center;
-    border-bottom: 1px solid #fff;
+  text-align: center;
+  border-bottom: 1px solid #fff;
 }
 
 .menu ul li a {
   text-decoration: none;
   color: #7c829a;
 }
-
-
 
 /* ------------------------------ HERO ------------------------------ */
 
@@ -167,8 +180,8 @@ nav .icon-container #btnCross{
 #partners {
   margin: 3.5rem 0;
 }
-#carrousel{
-  display: none!important;
+#carrousel {
+  display: none !important;
 }
 .owl-item img {
   filter: grayscale(100%);
@@ -184,7 +197,7 @@ nav .icon-container #btnCross{
   filter: none;
 }
 
-.owl-carousel .partners-logos .owl-loaded .owl-drag{
+.owl-carousel .partners-logos .owl-loaded .owl-drag {
   position: relative;
 }
 
@@ -495,30 +508,31 @@ footer {
 
 /* ------------------------------ Form ------------------------------ */
 
-#contact .container {
-  width: 90%;
+#contact-us .container {
+  width: 80%;
   margin: auto;
 }
-.contact-container h1 {
+
+#contact-us .contact-container h1 {
   font-size: 2rem;
   color: #292e47;
   margin-top: 5rem;
   margin-bottom: 4rem;
 }
 
-.contact-container .contact-form form {
+#contact-us .contact-container .contact-form form {
   display: flex;
   flex-direction: column;
 }
 
-.contact-container .contact-form label {
+#contact-us .contact-container .contact-form label {
   font-size: 1.2rem;
   font-weight: 400;
   color: #6b708d;
   margin-bottom: 10px;
 }
 
-.contact-container .contact-form form input,
+#contact-us .contact-container .contact-form form input,
 textarea {
   border: 0;
   background-color: rgba(107, 112, 141, 0.1);
@@ -529,12 +543,12 @@ textarea {
   margin-bottom: 24px;
 }
 
-.contact-container .contact-form form textarea {
+#contact-us .contact-container .contact-form form textarea {
   padding-top: 10px;
   height: 200px;
 }
 
-.contact-container .contact-form form button {
+#contact-us .contact-container .contact-form form button {
   border: 0;
   background-color: #072ac8;
   font-weight: 500;
@@ -542,6 +556,47 @@ textarea {
   color: #fff;
   padding: 1.5rem;
   text-decoration: none;
+}
+
+#contact-us .contact-email-phone {
+  display: flex;
+  flex-direction: column;
+}
+
+#contact-us .contact-email-phone .email {
+  display: flex;
+  flex-direction: column;
+}
+
+#contact-us .contact-email-phone .phone {
+  display: flex;
+  flex-direction: column;
+}
+
+#contact-us .message-container {
+  position: relative;
+}
+
+#contact-us .message {
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  font-weight: bold;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+#contact-us .success-message {
+  background-color: #dff0d8;
+  color: #3c763d;
+}
+
+#contact-us .error-message {
+  background-color: #f2dede;
+  color: #a94442;
 }
 
 /* ----------------------------------------------------------------------------- */
@@ -785,10 +840,10 @@ textarea {
   header {
     padding: 52px 0;
   }
-.icon-container{
+  .icon-container {
     display: none;
   }
-  .menu{
+  .menu {
     height: auto;
     background-color: transparent;
     position: static;
@@ -797,11 +852,11 @@ textarea {
   .contact {
     display: block;
   }
-  .menu ul{
+  .menu ul {
     flex-direction: row;
     justify-content: center;
   }
-  .menu ul li{
+  .menu ul li {
     width: auto;
     border: 0;
   }
@@ -813,47 +868,31 @@ textarea {
     width: 100%;
     align-items: center;
   }
-  #logosMobile{
-    display: none!important;
+  #logosMobile {
+    display: none !important;
   }
-  #carrousel{
-    display: block!important;
+  #carrousel {
+    display: block !important;
   }
-  .contact .contact-btn {
-    background-color: #072ac8;
-    color: white;
-    font-weight: 500;
-    font-size: 1.05rem;
-    padding: 16px;
-    text-decoration: none;
-  }
+
   #hero .hero-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
+
   #hero .hero-text {
     width: 40%;
     text-align: left;
   }
+
   #hero .hero-pictures {
     width: 55%;
   }
+
   #hero .hero-container-button .contact-btn {
     order: 2;
     margin-left: 16px;
-  }
-
-  #contact .container {
-    width: 70%;
-    margin: auto;
-  }
-
-  #contact .contact-container h1 {
-    font-size: 4rem;
-    color: #292e47;
-    margin-top: 5rem;
-    margin-bottom: 4rem;
   }
 
   #about-us .about-persons-container {
@@ -866,10 +905,11 @@ textarea {
     width: 30%;
   }
 
-  #favorite-songs .container .title-about,  #podcast .container .title-about{
-   margin-left: 160px;
-   margin-top: 70px;
-   margin-bottom: 40px;
+  #favorite-songs .container .title-about,
+  #podcast .container .title-about {
+    margin-left: 160px;
+    margin-top: 70px;
+    margin-bottom: 40px;
   }
 
   #favorite-songs .video-frame iframe {
@@ -879,15 +919,31 @@ textarea {
   #podcast .podcast-frame iframe {
     width: 35rem;
   }
+
+  #contact-us .container {
+    width: 80%;
+    margin: auto;
+  }
+
+  #contact-us .contact-container h1 {
+    font-size: 4rem;
+    color: #292e47;
+    margin-top: 5rem;
+    margin-bottom: 4rem;
+  }
+
+  #contact-us .contact-email-phone {
+    display: flex;
+    justify-content: space-between;
+    width: auto;
+  }
+
+  #contact-us .contact-email-phone .email {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+  }
 }
-
-/* ------------------------------ Hamburger menu ------------------------------ */
-
-/* Your CSS code goes here */
-
-/* ------------------------------ Alert ------------------------------ */
-
-/* Your CSS code goes here */
 
 /* ------------------------------ Sticky scroll bar ------------------------------ */
 
