--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -79,6 +79,7 @@ nav {
   left: 0;
   background: #c9c8c9;
   transition: all 0.3s ease;
+  z-index: 9999;
 }
 .contact {
   display: none;
@@ -575,6 +576,7 @@ textarea {
 
 #contact-us .message-container {
   position: relative;
+  margin-top: 10px;
 }
 
 #contact-us .message {
@@ -848,6 +850,7 @@ textarea {
     background-color: transparent;
     position: static;
     width: auto;
+    visibility: hidden;
   }
   .contact {
     display: block;
@@ -934,6 +937,7 @@ textarea {
 
   #contact-us .contact-email-phone {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     width: auto;
   }
@@ -941,10 +945,76 @@ textarea {
   #contact-us .contact-email-phone .email {
     display: flex;
     flex-direction: column;
-    width: auto;
+    width: 49.5%;
+  }
+  #contact-us .contact-email-phone .phone {
+    display: flex;
+    flex-direction: column;
+    width: 49.5%;
   }
 }
 
 /* ------------------------------ Sticky scroll bar ------------------------------ */
 
-/* Your CSS code goes here */
+.scroll-to-top-btn {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 0px;
+  width: 40px;
+  height: 40px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  z-index: 9999;
+}
+
+.scroll-to-top-btn.show {
+  display: block;
+}
+
+/* ------------------------------ Loader ------------------------------ */
+
+#loader {
+  display: flex;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #f2f4fc;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+}
+
+#loader.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.spinner {
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+  border: 4px solid #f2f4fc;
+  border-top-color: rgb(249, 199, 76);
+  animation: spin 1.5s linear forwards;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    border-top-color: rgb(249, 199, 76);
+  }
+  100% {
+    transform: rotate(270deg);
+    border-top-color: #f2f4fc;
+  }
+}
